# nlcpy

./: .coveragerc  .flake8  .gitignore  LICENSE  MANIFEST.in  MANIFEST.in.sdist  MANIFEST.in.wheel  Makefile  README.md  build_inplace.sh  exe_ut.sh  make.inc  make_wheel.sh  run_pytest.sh  sample.py  setup.cfg  setup.py  tox.ini
LICENSE_DETAIL/: LICENSE_DETAIL
bench/: clean_all.sh
bench/Haversine/: clean.sh  eval.py  gen_graph.py  run_bench.sh
bench/basic_comp/: bench_core.py  bench_op.py  clean.sh  eval.py  gen_graph.py  run_bench.sh
bench/check_ufunc/: bench_core.py  bench_ufunc.py  clean.sh  eval.py  extract_bad_op.py  run_bench.sh
bench/fft_bench/: bench_core.py  bench_fft.py  eval.py  gen_graph.py  run_bench.sh
bench/stencil_bench/: clean.sh  compute_cupy_fusion.py  compute_nlcpy_sca.py  compute_numba_cpu.py  compute_numba_cuda.py  compute_pystencils.py  compute_xa.py  compute_xya.py  compute_xyza.py  eval.py  gen_graph.py  params.py  run.py  run_bench.sh
config/: MANIFEST.in.sdist  MANIFEST.in.wheel.vh  setup_ve1.cfg  setup_ve3.cfg  setup_vh.cfg
doc/: .gitignore  Makefile  doxyfile.en  html_reform.sh
doc/common/: extra.css
doc/nlcpydoc/: __init__.py  __main__.py  docscrape.py  docscrape_sphinx.py  nlcpydoc.py  validate.py  xref.py
doc/scripts/: dox_template  (+2 more)
nlcpy/: .gitignore  __config__.py  __init__.py  _environment.py  _path.py  _warmup.py
nlcpy_ve1_kernel/: __init__.py
requirements/: requirements_build.txt  requirements_doc.txt  requirements_run.txt
rpm/: Makefile
scripts/: clean.sh  cppnlcpy.pl  dox.sh  m4_conv.sh  make_dep.sh
(+765 files in other folders)
