# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = nlcpy
description = NLCPy is a package for accelerating performance of Python scripts using NumPy on SX-Aurora TSUBASA.
long_description = file:README.md
long_description_content_type = text/markdown
keywords = nlcpy
license = BSD 3-Clause
classifiers=
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development
url = https://github.com/SX-Aurora/nlcpy/
project_urls=
    Bug Tracker = https://github.com/SX-Aurora/nlcpy/issues
    Documentation = 
author = NEC
author_email = dev-nlcpy@sxarr.jp.nec.com


[options]
zip_safe=False
include_package_data=True
packages=find:

python_requires= >=3.6
install_requires=
    numpy>=1.17
    six
    psutil


[options.package_data]
* = *.so


[options.extras_require]
dev = check-manifest
test = coverage

[options.packages.find]


[options.data_files]

